--- a/easynavigation/src/main/res/layout/container_layout.xml
+++ b/easynavigation/src/main/res/layout/container_layout.xml
@@ -3,14 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <LinearLayout
-        android:id="@+id/add_view_ll"
+    <com.next.easynavigation.view.CustomViewPager
+        android:id="@+id/mViewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:visibility="gone"/>
-
+        android:layout_height="match_parent"/>
 
     <RelativeLayout
         android:id="@+id/add_rl"
@@ -37,15 +33,17 @@
             android:id="@+id/empty_line"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_alignParentBottom="true"
+            android:clickable="false"
             android:background="@android:color/transparent"
-            android:clickable="false" />
+            android:layout_alignParentBottom="true" />
 
     </RelativeLayout>
 
-    <com.next.easynavigation.view.CustomViewPager
-        android:id="@+id/mViewPager"
+    <LinearLayout
+        android:id="@+id/add_view_ll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"/>
 
 </RelativeLayout>
